<?xml version="1.0"?>
<package format="3">
  <name>dbow3_ros</name>
  <version>0.0.0</version>
  <description>The dbow3_ros package</description>
  <maintainer email="tnakamura.amsl@gmail.com">Toshiki Nakamura</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

  <export>
  </export>
</package>
